--- a/index1.html
+++ b/index1.html
@@ -20,8 +20,8 @@
             
             
           </nav>
-    <div style="display: flex;padding-top: 1.5em;">
-        <div style="background-color: rgb(23, 44, 14);height: 40vh;flex: 4000%;height: 40vh;">
+    <div style="display: flex;padding-top: 0.1em;">
+        <div style="background-color: rgb(23, 44, 14);flex: 70900%;height: 40vh;">
           <h1 style="font-family: 'Spinnaker', sans-serif;color:whitesmoke;font-size: 350%;    display: flex;
     align-items: center;
     justify-content: center;">NON-EXCLUSIVE CLUBS</h1> 
